{
  "version": 4,
  "terraform_version": "1.3.9",
  "serial": 49,
  "lineage": "289d0f7f-6666-b2d1-b4fc-5cf0741bf213",
  "resources": [
    {
      "module": "module.dev",
      "mode": "managed",
      "type": "aws_default_network_acl",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:684755992847:network-acl/acl-065d5c4d82239a40d",
            "default_network_acl_id": "acl-065d5c4d82239a40d",
            "egress": [],
            "id": "acl-065d5c4d82239a40d",
            "ingress": [],
            "owner_id": "684755992847",
            "subnet_ids": [
              "subnet-00c69948f6788dbe7",
              "subnet-0a4ed9f352622df27",
              "subnet-0b80726b6b52d6ecd",
              "subnet-0bbaf894e14a85034"
            ],
            "tags": {
              "Name": "test-dev-default-nacl"
            },
            "tags_all": {
              "Name": "test-dev-default-nacl"
            },
            "vpc_id": "vpc-03cc61faab3fd6286"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.dev.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.dev",
      "mode": "managed",
      "type": "aws_default_route_table",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:684755992847:route-table/rtb-0c3216dd5d74f1831",
            "default_route_table_id": "rtb-0c3216dd5d74f1831",
            "id": "rtb-0c3216dd5d74f1831",
            "owner_id": "684755992847",
            "propagating_vgws": null,
            "route": [],
            "tags": {
              "Name": "test-dev-default-rtb"
            },
            "tags_all": {
              "Name": "test-dev-default-rtb"
            },
            "timeouts": null,
            "vpc_id": "vpc-03cc61faab3fd6286"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.dev.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.dev",
      "mode": "managed",
      "type": "aws_default_security_group",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:684755992847:security-group/sg-097c7d5ec0368721e",
            "description": "default VPC security group",
            "egress": [],
            "id": "sg-097c7d5ec0368721e",
            "ingress": [],
            "name": "default",
            "name_prefix": "",
            "owner_id": "684755992847",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "test-dev-default-sg"
            },
            "tags_all": {
              "Name": "test-dev-default-sg"
            },
            "vpc_id": "vpc-03cc61faab3fd6286"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.dev.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.dev",
      "mode": "managed",
      "type": "aws_eip",
      "name": "bastion",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0aed6a529d137a8ea",
            "association_id": "eipassoc-0656938ee76534c0c",
            "domain": "vpc",
            "id": "eipalloc-0aed6a529d137a8ea",
            "instance": "i-0a8d91910d795e521",
            "network_border_group": "ap-northeast-2",
            "network_interface": "eni-060e5d3469b6415fa",
            "private_dns": "ip-10-0-0-240.ap-northeast-2.compute.internal",
            "private_ip": "10.0.0.240",
            "public_dns": "ec2-15-164-137-110.ap-northeast-2.compute.amazonaws.com",
            "public_ip": "15.164.137.110",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "test-dev-bastion-eip"
            },
            "tags_all": {
              "Name": "test-dev-bastion-eip"
            },
            "vpc": true
          },
          "dependencies": [
            "module.dev.aws_iam_instance_profile.bastion",
            "module.dev.aws_iam_role.bastion",
            "module.dev.aws_instance.bastion",
            "module.dev.aws_security_group.bastion_ec2",
            "module.dev.aws_subnet.public1",
            "module.dev.aws_vpc.vpc",
            "module.dev.data.aws_iam_policy_document.ec2_assume_role"
          ]
        }
      ]
    },
    {
      "module": "module.dev",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-084d8c8b15605b76b",
            "domain": "vpc",
            "id": "eipalloc-084d8c8b15605b76b",
            "network_border_group": "ap-northeast-2",
            "public_dns": "ec2-3-38-228-218.ap-northeast-2.compute.amazonaws.com",
            "public_ip": "3.38.228.218",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "test-dev-natgw1-eip"
            },
            "tags_all": {
              "Name": "test-dev-natgw1-eip"
            },
            "vpc": true
          },
          "dependencies": [
            "module.dev.aws_internet_gateway.igw",
            "module.dev.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.dev",
      "mode": "managed",
      "type": "aws_instance",
      "name": "bastion",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0a306845f8cfbd41a",
            "arn": "arn:aws:ec2:ap-northeast-2:684755992847:instance/i-0a8d91910d795e521",
            "associate_public_ip_address": true,
            "availability_zone": "ap-northeast-2a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": true,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "test-dev-bastion-instanceprofile",
            "id": "i-0a8d91910d795e521",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "key_name": "seoul-ec2-key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-060e5d3469b6415fa",
            "private_dns": "ip-10-0-0-240.ap-northeast-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.0.240",
            "public_dns": "ec2-43-201-1-73.ap-northeast-2.compute.amazonaws.com",
            "public_ip": "43.201.1.73",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "tags": {
                  "Name": "test-dev-bastion-ec2"
                },
                "throughput": 125,
                "volume_id": "vol-09231cc1115804024",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0a4ed9f352622df27",
            "tags": {
              "Name": "test-dev-bastion-ec2"
            },
            "tags_all": {
              "Name": "test-dev-bastion-ec2"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0268f07464b5f6bec"
            ]
          },
          "dependencies": [
            "module.dev.aws_iam_instance_profile.bastion",
            "module.dev.aws_iam_role.bastion",
            "module.dev.aws_security_group.bastion_ec2",
            "module.dev.aws_subnet.public1",
            "module.dev.aws_vpc.vpc",
            "module.dev.data.aws_iam_policy_document.ec2_assume_role"
          ]
        }
      ]
    },
    {
      "module": "module.dev",
      "mode": "managed",
      "type": "aws_instance",
      "name": "private-ec2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0a306845f8cfbd41a",
            "arn": "arn:aws:ec2:ap-northeast-2:684755992847:instance/i-022c94795680a59b7",
            "associate_public_ip_address": false,
            "availability_zone": "ap-northeast-2a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": true,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "test-dev-private_ec2-instanceprofile",
            "id": "i-022c94795680a59b7",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.large",
            "ipv6_address_count": 0,
            "key_name": "seoul-ec2-key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0c2284005cff71b1f",
            "private_dns": "ip-10-0-11-191.ap-northeast-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.11.191",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "tags": {
                  "Name": "test-dev-private-ec2"
                },
                "throughput": 125,
                "volume_id": "vol-089a55f33ccc84c7f",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0bbaf894e14a85034",
            "tags": {
              "Name": "test-dev-private-ec2"
            },
            "tags_all": {
              "Name": "test-dev-private-ec2"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-01b20db30773fbae4"
            ]
          },
          "dependencies": [
            "module.dev.aws_iam_instance_profile.private_ec2",
            "module.dev.aws_iam_role.private_ec2",
            "module.dev.aws_security_group.private_ec2",
            "module.dev.aws_subnet.private1",
            "module.dev.aws_vpc.vpc",
            "module.dev.data.aws_iam_policy_document.ec2_assume_role"
          ]
        }
      ]
    },
    {
      "module": "module.dev",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:684755992847:internet-gateway/igw-006eedef6b945ccce",
            "id": "igw-006eedef6b945ccce",
            "owner_id": "684755992847",
            "tags": {
              "Name": "test-dev-igw"
            },
            "tags_all": {
              "Name": "test-dev-igw"
            },
            "vpc_id": "vpc-03cc61faab3fd6286"
          },
          "dependencies": [
            "module.dev.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.dev",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-084d8c8b15605b76b",
            "association_id": "eipassoc-0b37d1e946a1de0e5",
            "connectivity_type": "public",
            "id": "nat-08ed9938c43927729",
            "network_interface_id": "eni-0beb7914c39d42f2f",
            "private_ip": "10.0.0.111",
            "public_ip": "3.38.228.218",
            "subnet_id": "subnet-0a4ed9f352622df27",
            "tags": {
              "Name": "test-dev-natgw1"
            },
            "tags_all": {
              "Name": "test-dev-natgw1"
            }
          },
          "dependencies": [
            "module.dev.aws_eip.nat_gateway",
            "module.dev.aws_internet_gateway.igw",
            "module.dev.aws_subnet.public1",
            "module.dev.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.dev",
      "mode": "managed",
      "type": "aws_network_acl",
      "name": "private1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:684755992847:network-acl/acl-0692ac3a8d5a45d01",
            "egress": [
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "id": "acl-0692ac3a8d5a45d01",
            "ingress": [
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "owner_id": "684755992847",
            "subnet_ids": [
              "subnet-09f83df4027b03a33",
              "subnet-0bbaf894e14a85034"
            ],
            "tags": {
              "Name": "test-dev-private1-nacl"
            },
            "tags_all": {
              "Name": "test-dev-private1-nacl"
            },
            "vpc_id": "vpc-03cc61faab3fd6286"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.dev.aws_subnet.private1",
            "module.dev.aws_subnet.private2",
            "module.dev.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.dev",
      "mode": "managed",
      "type": "aws_network_acl",
      "name": "private3",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:684755992847:network-acl/acl-0638eb23ced1b92f1",
            "egress": [
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "id": "acl-0638eb23ced1b92f1",
            "ingress": [
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "owner_id": "684755992847",
            "subnet_ids": [
              "subnet-0517da3d5aa84ce5e",
              "subnet-0f91a6f07af828ddb"
            ],
            "tags": {
              "Name": "test-dev-private3-nacl"
            },
            "tags_all": {
              "Name": "test-dev-private3-nacl"
            },
            "vpc_id": "vpc-03cc61faab3fd6286"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.dev.aws_subnet.private3",
            "module.dev.aws_subnet.private4",
            "module.dev.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.dev",
      "mode": "managed",
      "type": "aws_network_acl",
      "name": "public1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:684755992847:network-acl/acl-096b7911f5d9faef7",
            "egress": [
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "id": "acl-096b7911f5d9faef7",
            "ingress": [
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "owner_id": "684755992847",
            "subnet_ids": [
              "subnet-0a4ed9f352622df27",
              "subnet-0f1c77efd6ac1e54e"
            ],
            "tags": {
              "Name": "test-dev-public-nacl"
            },
            "tags_all": {
              "Name": "test-dev-public-nacl"
            },
            "vpc_id": "vpc-03cc61faab3fd6286"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.dev.aws_subnet.public1",
            "module.dev.aws_subnet.public2",
            "module.dev.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.dev",
      "mode": "managed",
      "type": "aws_network_acl",
      "name": "public3",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:684755992847:network-acl/acl-0661612f171e601aa",
            "egress": [
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "id": "acl-0661612f171e601aa",
            "ingress": [
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "owner_id": "684755992847",
            "subnet_ids": [
              "subnet-00c69948f6788dbe7",
              "subnet-0b80726b6b52d6ecd"
            ],
            "tags": {
              "Name": "test-dev-public3-nacl"
            },
            "tags_all": {
              "Name": "test-dev-public3-nacl"
            },
            "vpc_id": "vpc-03cc61faab3fd6286"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.dev.aws_subnet.public3",
            "module.dev.aws_subnet.public4",
            "module.dev.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.dev",
      "mode": "managed",
      "type": "aws_route",
      "name": "private1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-062dee3582caa4f231080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-08ed9938c43927729",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-062dee3582caa4f23",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.dev.aws_eip.nat_gateway",
            "module.dev.aws_internet_gateway.igw",
            "module.dev.aws_nat_gateway.nat_gateway",
            "module.dev.aws_route_table.private1",
            "module.dev.aws_subnet.public1",
            "module.dev.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.dev",
      "mode": "managed",
      "type": "aws_route",
      "name": "public1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-006eedef6b945ccce",
            "id": "r-rtb-0f7e4ee2a179733ab1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0f7e4ee2a179733ab",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.dev.aws_internet_gateway.igw",
            "module.dev.aws_route_table.public1",
            "module.dev.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.dev",
      "mode": "managed",
      "type": "aws_route",
      "name": "public3",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-006eedef6b945ccce",
            "id": "r-rtb-0daad25c847354d3c1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0daad25c847354d3c",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.dev.aws_internet_gateway.igw",
            "module.dev.aws_route_table.public3",
            "module.dev.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.dev",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:684755992847:route-table/rtb-062dee3582caa4f23",
            "id": "rtb-062dee3582caa4f23",
            "owner_id": "684755992847",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "test-dev-private1-rtb"
            },
            "tags_all": {
              "Name": "test-dev-private1-rtb"
            },
            "timeouts": null,
            "vpc_id": "vpc-03cc61faab3fd6286"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.dev.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.dev",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private3",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:684755992847:route-table/rtb-077b36241a9bac456",
            "id": "rtb-077b36241a9bac456",
            "owner_id": "684755992847",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "test-dev-private3-rtb"
            },
            "tags_all": {
              "Name": "test-dev-private3-rtb"
            },
            "timeouts": null,
            "vpc_id": "vpc-03cc61faab3fd6286"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.dev.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.dev",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:684755992847:route-table/rtb-0f7e4ee2a179733ab",
            "id": "rtb-0f7e4ee2a179733ab",
            "owner_id": "684755992847",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "test-dev-public1-rtb"
            },
            "tags_all": {
              "Name": "test-dev-public1-rtb"
            },
            "timeouts": null,
            "vpc_id": "vpc-03cc61faab3fd6286"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.dev.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.dev",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public3",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:684755992847:route-table/rtb-0daad25c847354d3c",
            "id": "rtb-0daad25c847354d3c",
            "owner_id": "684755992847",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "test-dev-public3-rtb"
            },
            "tags_all": {
              "Name": "test-dev-public3-rtb"
            },
            "timeouts": null,
            "vpc_id": "vpc-03cc61faab3fd6286"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.dev.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.dev",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0038df4a6426a0bf1",
            "route_table_id": "rtb-062dee3582caa4f23",
            "subnet_id": "subnet-0bbaf894e14a85034"
          },
          "dependencies": [
            "module.dev.aws_route_table.private1",
            "module.dev.aws_subnet.private1",
            "module.dev.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.dev",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0fac24d23d338ebfd",
            "route_table_id": "rtb-062dee3582caa4f23",
            "subnet_id": "subnet-09f83df4027b03a33"
          },
          "dependencies": [
            "module.dev.aws_route_table.private1",
            "module.dev.aws_subnet.private2",
            "module.dev.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.dev",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private3",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0480a7f81310bca06",
            "route_table_id": "rtb-077b36241a9bac456",
            "subnet_id": "subnet-0f91a6f07af828ddb"
          },
          "dependencies": [
            "module.dev.aws_route_table.private3",
            "module.dev.aws_subnet.private3",
            "module.dev.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.dev",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private4",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0687db56c6f566e77",
            "route_table_id": "rtb-077b36241a9bac456",
            "subnet_id": "subnet-0517da3d5aa84ce5e"
          },
          "dependencies": [
            "module.dev.aws_route_table.private3",
            "module.dev.aws_subnet.private4",
            "module.dev.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.dev",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0db0a156162512343",
            "route_table_id": "rtb-0f7e4ee2a179733ab",
            "subnet_id": "subnet-0a4ed9f352622df27"
          },
          "dependencies": [
            "module.dev.aws_route_table.public1",
            "module.dev.aws_subnet.public1",
            "module.dev.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.dev",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0330d47aa7d93b1f2",
            "route_table_id": "rtb-0f7e4ee2a179733ab",
            "subnet_id": "subnet-0f1c77efd6ac1e54e"
          },
          "dependencies": [
            "module.dev.aws_route_table.public1",
            "module.dev.aws_subnet.public2",
            "module.dev.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.dev",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public3",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0e198147f57c30343",
            "route_table_id": "rtb-0daad25c847354d3c",
            "subnet_id": "subnet-0b80726b6b52d6ecd"
          },
          "dependencies": [
            "module.dev.aws_route_table.public3",
            "module.dev.aws_subnet.public3",
            "module.dev.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.dev",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public4",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-02b09e99d18d850a0",
            "route_table_id": "rtb-0daad25c847354d3c",
            "subnet_id": "subnet-00c69948f6788dbe7"
          },
          "dependencies": [
            "module.dev.aws_route_table.public3",
            "module.dev.aws_subnet.public4",
            "module.dev.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.dev",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "bastion_ec2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:684755992847:security-group/sg-0268f07464b5f6bec",
            "description": "for bastion ec2",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0268f07464b5f6bec",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "test-dev-bastion-sg",
            "name_prefix": "",
            "owner_id": "684755992847",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "test-dev-bastion-sg"
            },
            "tags_all": {
              "Name": "test-dev-bastion-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-03cc61faab3fd6286"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.dev.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.dev",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "private_ec2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:684755992847:security-group/sg-01b20db30773fbae4",
            "description": "for private ec2",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-01b20db30773fbae4",
            "ingress": [],
            "name": "test-dev-private-sg",
            "name_prefix": "",
            "owner_id": "684755992847",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "test-dev-private-sg"
            },
            "tags_all": {
              "Name": "test-dev-private-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-03cc61faab3fd6286"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.dev.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.dev",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "private_ec2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": null,
            "from_port": 22,
            "id": "sgrule-1379795202",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-01b20db30773fbae4",
            "security_group_rule_id": "sgr-0b3ba27b24c4cd027",
            "self": false,
            "source_security_group_id": "sg-0268f07464b5f6bec",
            "timeouts": null,
            "to_port": 22,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.dev.aws_security_group.bastion_ec2",
            "module.dev.aws_security_group.private_ec2",
            "module.dev.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.dev",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:684755992847:subnet/subnet-0bbaf894e14a85034",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2a",
            "availability_zone_id": "apne2-az1",
            "cidr_block": "10.0.11.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0bbaf894e14a85034",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "684755992847",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "test-dev-private1-subnet"
            },
            "tags_all": {
              "Name": "test-dev-private1-subnet"
            },
            "vpc_id": "vpc-03cc61faab3fd6286"
          },
          "dependencies": [
            "module.dev.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.dev",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:684755992847:subnet/subnet-09f83df4027b03a33",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2c",
            "availability_zone_id": "apne2-az3",
            "cidr_block": "10.0.12.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-09f83df4027b03a33",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "684755992847",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "test-dev-private2-subnet"
            },
            "tags_all": {
              "Name": "test-dev-private2-subnet"
            },
            "vpc_id": "vpc-03cc61faab3fd6286"
          },
          "dependencies": [
            "module.dev.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.dev",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private3",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:684755992847:subnet/subnet-0f91a6f07af828ddb",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2a",
            "availability_zone_id": "apne2-az1",
            "cidr_block": "10.0.13.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0f91a6f07af828ddb",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "684755992847",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "test-dev-private3-subnet"
            },
            "tags_all": {
              "Name": "test-dev-private3-subnet"
            },
            "vpc_id": "vpc-03cc61faab3fd6286"
          },
          "dependencies": [
            "module.dev.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.dev",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private4",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:684755992847:subnet/subnet-0517da3d5aa84ce5e",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2c",
            "availability_zone_id": "apne2-az3",
            "cidr_block": "10.0.14.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0517da3d5aa84ce5e",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "684755992847",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "test-dev-private4-subnet"
            },
            "tags_all": {
              "Name": "test-dev-private4-subnet"
            },
            "vpc_id": "vpc-03cc61faab3fd6286"
          },
          "dependencies": [
            "module.dev.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.dev",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:684755992847:subnet/subnet-0a4ed9f352622df27",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2a",
            "availability_zone_id": "apne2-az1",
            "cidr_block": "10.0.0.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0a4ed9f352622df27",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "684755992847",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "test-dev-public1-subnet"
            },
            "tags_all": {
              "Name": "test-dev-public1-subnet"
            },
            "vpc_id": "vpc-03cc61faab3fd6286"
          },
          "dependencies": [
            "module.dev.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.dev",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:684755992847:subnet/subnet-0f1c77efd6ac1e54e",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2c",
            "availability_zone_id": "apne2-az3",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0f1c77efd6ac1e54e",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "684755992847",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "test-dev-public2-subnet"
            },
            "tags_all": {
              "Name": "test-dev-public2-subnet"
            },
            "vpc_id": "vpc-03cc61faab3fd6286"
          },
          "dependencies": [
            "module.dev.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.dev",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public3",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:684755992847:subnet/subnet-0b80726b6b52d6ecd",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2a",
            "availability_zone_id": "apne2-az1",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0b80726b6b52d6ecd",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "684755992847",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "test-dev-public3-subnet"
            },
            "tags_all": {
              "Name": "test-dev-public3-subnet"
            },
            "vpc_id": "vpc-03cc61faab3fd6286"
          },
          "dependencies": [
            "module.dev.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.dev",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public4",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:684755992847:subnet/subnet-00c69948f6788dbe7",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2c",
            "availability_zone_id": "apne2-az3",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-00c69948f6788dbe7",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "684755992847",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "test-dev-public4-subnet"
            },
            "tags_all": {
              "Name": "test-dev-public4-subnet"
            },
            "vpc_id": "vpc-03cc61faab3fd6286"
          },
          "dependencies": [
            "module.dev.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.dev",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:684755992847:vpc/vpc-03cc61faab3fd6286",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-065d5c4d82239a40d",
            "default_route_table_id": "rtb-0c3216dd5d74f1831",
            "default_security_group_id": "sg-097c7d5ec0368721e",
            "dhcp_options_id": "dopt-0f67ceeaed311d86d",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-03cc61faab3fd6286",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0c3216dd5d74f1831",
            "owner_id": "684755992847",
            "tags": {
              "Name": "test-dev-vpc"
            },
            "tags_all": {
              "Name": "test-dev-vpc"
            }
          }
        }
      ]
    }
  ]
}